--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
 	<div id="loadercontainer">
 		<div id="loader"></div>
@@ -25,6 +26,12 @@
 	</header>
 	<article>
 		<div id="content">
+			<div class="linkscontainer" data-aos="fade-down" data-aos-duration="1750">
+				<div class="links"><a href=""><img src="images/club_lectura.png" alt="Club de Lectura"></a></div>
+				<div class="links"><a href=""><img src="images/bibliotecamontano.png" alt="Biblioteca Montano"></a>
+				</div>
+				<div class="links"><a href=""><img src="images/revistamontano.png" alt="Revista Montano"></a></div>
+			</div>
 			<section data-aos="fade-right" data-aos-duration="1000">
 				<h2 class="part" id="bibliotecas">Biblioteca</h2><br>
 				<div class="library">
@@ -374,9 +381,10 @@
 		</div>
 		<div class="name">
 			<h3>Oscar Humberto Alexander de León López
-			<br>2do Básico
-			<br>Marzo 2021</h3>
+				<br>2do Básico
+				<br>Marzo 2021</h3>
 		</div>
+		<iframe src="link" frameborder="0" width="750" height="400"></iframe>
 	</article>
 	<script src="script.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -384,4 +392,5 @@
 		AOS.init();
 	</script>
 </body>
+
 </html>
